add Title Label & it localization; add Logo Image View

--- a/OmnieCommerceAdmin/Resources/Info.plist
+++ b/OmnieCommerceAdmin/Resources/Info.plist
@@ -23,13 +23,41 @@
 	<key>UILaunchStoryboardName</key>
 	<string>Main</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
+	<string>SignInShow</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
 	</array>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleLightContent</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>helveticaneuecyr-black.otf</string>
+		<string>helveticaneuecyr-blackitalic.otf</string>
+		<string>helveticaneuecyr-bold.otf</string>
+		<string>helveticaneuecyr-bolditalic.otf</string>
+		<string>helveticaneuecyr-heavy.otf</string>
+		<string>helveticaneuecyr-heavyitalic.otf</string>
+		<string>helveticaneuecyr-italic.otf</string>
+		<string>helveticaneuecyr-light.otf</string>
+		<string>helveticaneuecyr-lightitalic.otf</string>
+		<string>helveticaneuecyr-medium.otf</string>
+		<string>helveticaneuecyr-mediumitaicl.otf</string>
+		<string>helveticaneuecyr-roman.otf</string>
+		<string>helveticaneuecyr-thin.otf</string>
+		<string>helveticaneuecyr-thinitalic.otf</string>
+		<string>helveticaneuecyr-ultralight.otf</string>
+		<string>helveticaneuecyr-ultralightitalic.otf</string>
+		<string>UBUNTU-B.TTF</string>
+		<string>UBUNTU-BI.TTF</string>
+		<string>UBUNTU-C.TTF</string>
+		<string>UBUNTU-I.TTF</string>
+		<string>UBUNTU-L.TTF</string>
+		<string>UBUNTU-LI.TTF</string>
+		<string>UBUNTU-M.TTF</string>
+		<string>UBUNTU-MI.TTF</string>
+		<string>UBUNTU-R.TTF</string>
+	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
